Add: 스타일,  기능구현 추가

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_KEY=cf8dd119825332079e7225bb7b9a2439
+REACT_APP_API_KEY="cf8dd119825332079e7225bb7b9a2439"
 REACT_APP_API_URL=http://api.currencylayer.com/live
